Post method for bulk/terminate
